<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/find_wifi"
            android:icon="@drawable/ic_map_networks"
            android:title="@string/networks" />
        <item
            android:id="@+id/request_wifi"
            android:icon="@drawable/ic_map_requests"
            android:title="@string/requests" />
        <item
            android:id="@+id/nav_delete"
            android:icon="@drawable/ic_map_delete"
            android:title="@string/delete" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_menu_rate"
                android:title="@string/rate" />
        </menu>
    </item>

</menu>
